@@ -2,7 +2,7 @@
 
 ## Getting started
 
-This project is using [Maven](https://maven.apache.org) 3 and requires Java 8 or higher.
+This project is using [Maven](https://maven.apache.org) 3 and requires whatever Java version that Graylog requires (Java 17 or higher?).
 
 ```bash
 git clone https://github.com/irgendwr/TelegramAlert.git
@@ -13,26 +13,30 @@ export GRAYLOG_VERSION=$(xmllint --xpath '/*[local-name()="project"]/*[local-nam
 # Checkout desired Graylog version
 echo "Checking out Graylog ${GRAYLOG_VERSION}"
 git clone --depth 1 --branch "${GRAYLOG_VERSION}" https://github.com/Graylog2/graylog2-server.git ../graylog2-server
-# Build Graylog web interface
 pushd ../graylog2-server
-mvn generate-resources -pl graylog2-server -B -V
+./mvnw compile
 popd
 ```
 
 ## Build
 
-Run `mvn clean package` to build a JAR file.
+Run `../graylog2-server/mvnw -B package --file pom.xml` to build a JAR file.
 
-Note: You may need to define the correct Java version for Maven, eg. via `export JAVA_HOME=/usr/lib/jvm/java-8-openjdk`
+Note: You may need to define the correct Java version for Maven, eg. via
 
-*Alternatively, the [Graylog documentation](https://docs.graylog.org/en/latest/pages/plugins.html) describes how to create a convenient setup with hot reloading.*
+```bash
+export JAVA_HOME="/usr/lib/jvm/java-17-openjdk"
+export PATH="/usr/lib/jvm/java-17-openjdk/bin/:$PATH"
+```
+
+*Alternatively, the [Graylog documentation](https://go2docs.graylog.org/5-0/what_more_can_graylog_do_for_me/plugins.html?tocpath=What%20More%20Can%20Graylog%20Do%20for%20Me%253F%7CPlugins%7C_____0#WritingPlugins) describes how to create a convenient setup with hot reloading.*
 
 ## Plugin Release
 
 We are using the maven release plugin:
 
 ```bash
-mvn release:prepare -Dresume=false
+../graylog2-server/mvnw release:prepare -Dresume=false
 ```
 
 This sets the version numbers, creates a tag and pushes to GitHub. GitHub will build and release artifacts automatically.
@@ -51,9 +55,8 @@ export GRAYLOG_VERSION=$(xmllint --xpath '/*[local-name()="project"]/*[local-nam
 # Checkout desired Graylog version
 echo "Checking out Graylog ${GRAYLOG_VERSION}"
 git clone --depth 1 --branch "${GRAYLOG_VERSION}" https://github.com/Graylog2/graylog2-server.git ../graylog2-server
-# Build Graylog web interface
 pushd ../graylog2-server
-mvn generate-resources -pl graylog2-server -B -V
+./mvnw compile
 popd
 ```
 
@@ -62,7 +65,7 @@ or update your graylog-project setup:
 ```bash
 # adjust the path below
 cd graylog-project
-# replace <VERSION> with the Graylog version (e.g. 4.2.7)
+# replace <VERSION> with the Graylog version (e.g. 6.0.1)
 graylog-project graylog-version --force-https-repos --set <VERSION>
 ```
 
@@ -78,12 +81,12 @@ Afterwards it might be a good idea to check `yarn audit`. It's crazy how many vu
 
 Run:
 ```bash
-docker run --rm --name mongo -p 27017:27017 -d mongo:3
+docker run --rm --name mongo -p 27017:27017 -d mongo:5
 docker run --rm --name elasticsearch \
     -e "http.host=0.0.0.0" \
     -e "ES_JAVA_OPTS=-Xms512m -Xmx512m" \
     -p 9200:9200 -p 9300:9300 \
-    -d docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.5
+    -d docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2
 ```
 
 Stop:
@@ -94,9 +97,25 @@ docker rm mongo elasticsearch
 
 ## Troubleshooting
 
+### Unrecognized option: --add-exports
+
+Ensure that Maven uses the correct Java version by setting the `JAVA_HOME` and `PATH` environment variables as shown above.
+
 ### class file has wrong version
 
-Ensure that Maven uses the correct Java version by setting the `JAVA_HOME` environment variable, eg. via `export JAVA_HOME=/usr/lib/jvm/java-8-openjdk`.
+Ensure that Maven uses the correct Java version by setting the `JAVA_HOME` and `PATH` environment variables as shown above.
+
+### Cannot find module '.../graylog2-server/graylog2-web-interface/manifests/vendor-manifest.json'
+
+```bash
+pushd ../graylog2-server
+mvn compile
+pushd graylog2-web-interface
+# Build Vendor Manifest:
+yarn install
+yarn run build
+popd; popd
+```
 
 ### Package "graylog-web-plugin" refers to a non-existing file
 
